update: new model to load

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <script src="main.js"></script>
-        <style>
+    <style>
       #myButton {
         position: absolute;
         top: 10px;
@@ -15,15 +15,15 @@
   </head>
   <body>
     <button id="myButton">Clique aqui</button>
-    <a-scene mindar-image="imageTargetSrc: ./targets.mind ;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: ./targets/targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
-        <img id="card" src=" https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
+        <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
         <a-asset-item id="avatarModel" src="models/scene.gltf"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-gltf-model  id="model" rotation="0 0 0 " position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel" >
+        <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel"></a-gltf-model>
       </a-entity>
     </a-scene>
   </body>
