--- a/index.html
+++ b/index.html
@@ -1,21 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <script src="main.js"></script>
-    <style>
-      #myButton {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        z-index: 1000;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
   </head>
   <body>
-    <button id="myButton">Clique aqui</button>
-    <a-scene mindar-image="imageTargetSrc: ./targets/targets.mind;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <button id="nextObject">></button>
+    <button id="previousObject"><</button>
+    <a-scene mindar-image="imageTargetSrc: ./targets/targets.mind; uiScanning:no; uiLoading:no;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
         <a-asset-item id="avatarModel" src="models/scene.gltf"></a-asset-item>
@@ -23,7 +18,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
       <a-entity mindar-image-target="targetIndex: 0">
-        <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel"></a-gltf-model>
+        <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate"/>
       </a-entity>
     </a-scene>
   </body>
