add: New models

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a-scene mindar-image="imageTargetSrc: ./targets/targets.mind; uiScanning:no; uiLoading:no;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
-        <a-asset-item id="avatarModel" src="models/scene.gltf"></a-asset-item>
+        <a-asset-item id="avatarModel" src="models/bocolla/bocolla.gltf"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -21,8 +21,8 @@
         <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel"/>
       </a-entity>
       <div id="bottomBox">
-        <h2>Lorem</h2>
-        <p>Ipsum</p>
+        <h2></h2>
+        <p></p>
       </div>
     </a-scene>
     
