--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
   </head>
   <body>
-    <button id="nextObject">></button>
-    <button id="previousObject"><</button>
+    <img id="logo" src="/img/stamper_logo_v1.png"/>
+    <button id="nextObject"></button>
+    <button id="previousObject"></button>
     <a-scene  id="trackRotation" mindar-image="imageTargetSrc: ./targets/targets.mind; uiScanning:no; uiLoading:no;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets>
         <img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.2.5/examples/image-tracking/assets/card-example/card.png" />
@@ -17,6 +18,7 @@
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled:  false"></a-camera>
+      <div id="background_color"></div>
       <a-entity mindar-image-target="targetIndex: 0" id="a-entity">
         <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel"/>
       </a-entity>
