--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
   </head>
   <body>
-    <img id="logo" src="/img/stamper_logo_v1.png"/>
+    <img id="logo" src="public/img/stamper_logo_v1.png"/>
     <button id="nextObject"></button>
     <button id="previousObject"></button>
     <a-scene  id="trackRotation" mindar-image="imageTargetSrc: ./targets/targets.mind; uiScanning:no; uiLoading:no;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
