--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       </a-entity>
       <div id="bottomBox">
         <h2></h2>
-        <p></p>
+        <p id="description1"></p>
+        <p id="description2"></p>
       </div>
     </a-scene>
     
