--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
       <a-camera position="0 0 0" look-controls="enabled:  false"></a-camera>
       <div id="background_color"></div>
+      <a-entity light="type: ambient; color: #BBB"></a-entity>
       <a-entity mindar-image-target="targetIndex: 0" id="a-entity">
         <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel"/>
       </a-entity>
