--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <a-light type="directional" color="#ffffff" intensity="5" position="0 0 -90"></a-light>
       <a-light type="directional" color="#ffffff" intensity="5" position="0 0 90"></a-light>
       
-      <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel"/>
 
       <a-entity mindar-image-target="targetIndex: 0" id="a-entity">
+        <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel"/>
       </a-entity>
       <div id="bottomBox">
         <h2></h2>
@@ -34,5 +34,16 @@
       </div>
     </a-scene>
     
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const entity = document.querySelector("#a-entity");
+        entity.addEventListener("targetFound", () => {
+          entity.setAttribute("visible", "true");
+        });
+        entity.addEventListener("targetLost", () => {
+          entity.setAttribute("visible", "true"); // Keep the model visible even when the target is lost
+        });
+      });
+    </script>
   </body>
 </html>
