--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       <a-light type="directional" color="#ffffff" intensity="5" position="0 0 90"></a-light>
       
 
+
+
       <a-entity mindar-image-target="targetIndex: 0" id="a-entity">
-        <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel"/>
+        <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel" visible="true"/>
       </a-entity>
       <div id="bottomBox">
         <h2></h2>
