--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
     <script src="main.js"></script>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <img id="logo" src="public/img/stamper_logo_v1.png"/>
@@ -17,17 +17,14 @@
         <a-asset-item id="avatarModel" src="models/bocolla/bocolla.gltf"></a-asset-item>
       </a-assets>
 
-      <a-camera position="0 0 0" look-controls="enabled:  false"></a-camera>
       <div id="background_color"></div>
       <a-light type="directional" color="#ffffff" intensity="10" position="1 1 0"></a-light>
       <a-light type="directional" color="#ffffff" intensity="5" position="0 0 -90"></a-light>
       <a-light type="directional" color="#ffffff" intensity="5" position="0 0 90"></a-light>
       
-
-
-
+      <a-gltf-model id="model" scale="0.3 0.3 0.3" src="#avatarModel" visible="true"/>
+      
       <a-entity mindar-image-target="targetIndex: 0" id="a-entity">
-        <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel" visible="true"/>
       </a-entity>
       <div id="bottomBox">
         <h2></h2>
