--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a-light type="directional" color="#ffffff" intensity="5" position="0 0 -90"></a-light>
       <a-light type="directional" color="#ffffff" intensity="5" position="0 0 90"></a-light>
       
-      <a-entity mindar-image-target="targetIndex: 0" id="a-entity">
+      <a-entity  id="a-entity">
         <a-gltf-model id="model"scale="0.3 0.3 0.3" src="#avatarModel" visible="true"/>
       </a-entity>
       <div id="bottomBox">
