--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <div id="background_color"></div>
       <a-light type="directional" color="#ffffff" intensity="10" position="1 1 0"></a-light>
       <a-light type="directional" color="#ffffff" intensity="5" position="0 0 -90"></a-light>
-      <a-light type="directional" color="#ffffff" intensity="5" position="0 0 90"></a-light>
-      
-      <a-entity  id="a-entity">
-        <a-gltf-model id="model"scale="0.3 0.3 0.3" src="#avatarModel" visible="true"/>
+      <a-light type="directional" color="#ffffff" intensity="5" position="0 0 90"></a-light>      
+
+      <a-entity mindar-image-target="targetIndex: 0" id="a-entity">
+        <a-gltf-model id="model" rotation="0 0 0" position="0 0 0" scale="0.3 0.3 0.3" src="#avatarModel" visible="true"></a-gltf-model>
       </a-entity>
       <div id="bottomBox">
         <h2></h2>
@@ -32,5 +32,15 @@
         <p id="description2"></p>
       </div>
     </a-scene>
+
+    <script>
+      document.querySelector('a-scene').addEventListener('targetFound', event => {
+        document.querySelector('#model').setAttribute('visible', 'true');
+      });
+    
+      document.querySelector('a-scene').addEventListener('targetLost', event => {
+        document.querySelector('#model').setAttribute('visible', 'false');
+      });
+    </script>
   </body>
 </html>
