--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       Stamper
     </title>
     <meta name="description" content="Stamper Demo">
-    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
     <script src="https://jeromeetienne.github.com.io/AR.js/aframe/build/aframe-ar.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -15,7 +15,7 @@
   <body>
     <a-scene embedded arjs>
       <a-entity scale="0.3 0.3 0.3">
-      <a-entity gltf-model="models/bocolla/bocolla.gltf" scale="1 1 1"/>
+        <a-entity gltf-model="models/bocolla/bocolla.gltf" scale="1 1 1">
       </a-entity>
     </a-scene>
   </body>
