--- a/index.html
+++ b/index.html
@@ -1,102 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AR with Camera and GLTF</title>
+<title>Camera Access</title>
 <style>
-  body { margin : 0px; overflow: hidden; }
   #video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* or contain, depending on your needs */
-    z-index: 0; /* Ensure video is behind the canvas */
+    width: 640px;
+    height: 480px;
+    object-fit: cover; /* Prevents distortion */
   }
+
   #canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1; /* Canvas on top of video */
+    display: none; /* Hidden by default */
   }
 </style>
 </head>
 <body>
 
-<video id="video" autoplay playsinline></video>
-<canvas id="canvas"></canvas>
+  <h1>Camera Access</h1>
 
-<script type="module">
-import * as THREE from 'https://unpkg.com/three@0.137.0/build/three.module.js';
-import { GLTFLoader } from 'https://unpkg.com/three@0.137.0/examples/jsm/loaders/GLTFLoader.js';
+  <video id="video" autoplay playsinline></video>
+  <button id="snap">Take Photo</button>
+  <canvas id="canvas"></canvas>  <img id="capturedImage" alt="Captured Image">  <script>
+    const video = document.getElementById('video');
+    const snapButton = document.getElementById('snap');
+    const canvas = document.getElementById('canvas');
+    const capturedImage = document.getElementById('capturedImage');
+    let stream; // To store the video stream
 
-async function main() {
-  const video = document.getElementById('video');
-  const canvas = document.getElementById('canvas');
-  const context = canvas.getContext('2d');
-
-  // Get user media (camera access)
-  try {
-    const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } }); // Front camera
-    video.srcObject = stream;
-  } catch (error) {
-    console.error('Error accessing camera:', error);
-    return; // Exit if camera access fails
-  }
-
-  // Three.js setup
-  const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-  const renderer = new THREE.WebGLRenderer({ canvas: canvas, alpha: true }); // Alpha for transparency
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  renderer.setClearColor(0x000000, 0); // Transparent background
-
-  // Load GLTF model
-  const loader = new GLTFLoader();
-  loader.load('models/bocolla/bocolla.gltf', (gltf) => { 
-    const model = gltf.scene;
-    scene.add(model);
-
-    // Position and scale the model as needed
-    model.scale.set(0.1, 0.1, 0.1); // Example scaling
-    model.position.set(0, 0, -1);   // Example positioning (adjust z for depth)
-  }, (xhr) => {
-    console.log((xhr.loaded / xhr.total * 100) + '% loaded'); // Optional: Loading progress
-  }, (error) => {
-    console.error('Error loading GLTF:', error);
-  });
-
-  // Animation loop
-  function animate() {
-    requestAnimationFrame(animate);
-
-    // Draw the video frame on the canvas
-    if (video.readyState === video.HAVE_ENOUGH_DATA) {
-      context.drawImage(video, 0, 0, canvas.width, canvas.height);
+    // Get user media (camera access)
+    async function getCameraStream() {
+      try {
+        stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        video.srcObject = stream;
+      } catch (error) {
+        console.error('Error accessing camera:', error);
+        alert('Error accessing camera. Please make sure you have a camera and grant permissions.'); // User-friendly message
+      }
     }
 
-    renderer.render(scene, camera);
-  }
 
-  // Resize handling
-  window.addEventListener('resize', () => {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-  });
+    getCameraStream(); // Call the function to start the camera
 
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
-  animate();
-}
 
-main();
+    snapButton.addEventListener('click', () => {
+        if (stream) { // Check if the stream is available
+            const context = canvas.getContext('2d');
+            canvas.width = video.videoWidth;  // Set canvas dimensions to video dimensions
+            canvas.height = video.videoHeight;
+            context.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-</script>
+            // Convert the canvas content to a data URL (e.g., base64)
+            const imageDataURL = canvas.toDataURL('image/png'); // You can change the format (e.g., 'image/jpeg')
+
+            capturedImage.src = imageDataURL; // Set the image source
+            capturedImage.style.display = 'block'; // Make the image visible
+        }
+    });
+
+
+    // Optional: Stop the camera stream when the page is closed or unloaded.
+    window.addEventListener('beforeunload', () => {
+        if (stream) {
+            stream.getTracks().forEach(track => track.stop());
+        }
+    });
+
+  </script>
 
 </body>
 </html>
