--- a/index.html
+++ b/index.html
@@ -3,14 +3,49 @@
 <head>
 <title>Camera Access</title>
 <style>
+  body, html {
+    margin: 0; /* Remove default margins */
+    padding: 0; /* Remove default padding */
+    height: 100%; /* Make body and html take up full viewport height */
+    overflow: hidden; /* Prevent scrollbars */
+  }
+
   #video {
-    width: 640px;
-    height: 480px;
-    object-fit: cover; /* Prevents distortion */
+    position: fixed; /* Fixed positioning to cover the entire viewport */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Maintain aspect ratio and cover the entire area */
+    z-index: -1; /* Place the video behind other content (if any) */
+  }
+
+  #snap {
+    position: absolute; /* Position the button */
+    top: 20px; /* Adjust as needed */
+    left: 50%;
+    transform: translateX(-50%); /* Center the button */
+    z-index: 1; /* Place the button above the video */
+    padding: 10px 20px;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    color: white;
+    border: none;
+    cursor: pointer;
+  }
+
+  #capturedImage {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%; /* Adjust as needed */
+    max-height: 90%; /* Adjust as needed */
+    z-index: 1; /* Place the image above the video */
+    display: none;
   }
 
   #canvas {
-    display: none; /* Hidden by default */
+    display: none;
   }
 </style>
 </head>
