--- a/index.html
+++ b/index.html
@@ -65,11 +65,28 @@
     // Get user media (camera access)
     async function getCameraStream() {
       try {
-        stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        // Define constraints for the rear camera
+        const constraints = {
+          video: {
+            facingMode: { exact: "environment" } // Use "environment" for back/rear camera
+          }
+        };
+
+        stream = await navigator.mediaDevices.getUserMedia(constraints);
         video.srcObject = stream;
       } catch (error) {
         console.error('Error accessing camera:', error);
-        alert('Error accessing camera. Please make sure you have a camera and grant permissions.'); // User-friendly message
+
+        // Fallback to the default camera if the rear camera is not available or permission is denied.
+        try {
+          stream = await navigator.mediaDevices.getUserMedia({ video: true }); // Default constraints
+          video.srcObject = stream;
+          console.warn("Rear camera not available. Using default camera.");
+
+        } catch (fallbackError) {
+          console.error("Error accessing default camera:", fallbackError);
+          alert('Error accessing camera. Please make sure you have a camera and grant permissions.');
+        }
       }
     }
 
