--- a/index.html
+++ b/index.html
@@ -2,69 +2,12 @@
 <html>
   <head>
     <title>Camera Access</title>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
 
   </head>
   <body>
     <video id="video" autoplay playsinline></video>
-    <canvas id="canvas"></canvas>  <img id="capturedImage" alt="Captured Image">  <script>
-      const video = document.getElementById('video');
-      const snapButton = document.getElementById('snap');
-      const canvas = document.getElementById('canvas');
-      const capturedImage = document.getElementById('capturedImage');
-      let stream; 
-
-      async function getCameraStream() {
-        try {
-          const constraints = {
-            video: {
-              facingMode: { exact: "environment" }
-            }
-          };
-
-          stream = await navigator.mediaDevices.getUserMedia(constraints);
-          video.srcObject = stream;
-        } catch (error) {
-          console.error('Error accessing camera:', error);
-
-          try {
-            stream = await navigator.mediaDevices.getUserMedia({ video: true });
-            video.srcObject = stream;
-            console.warn("Rear camera not available. Using default camera.");
-
-          } catch (fallbackError) {
-            console.error("Error accessing default camera:", fallbackError);
-            alert('Error accessing camera. Please make sure you have a camera and grant permissions.');
-          }
-        }
-      }
-
-
-      getCameraStream(); 
-
-
-      snapButton.addEventListener('click', () => {
-          if (stream) { 
-              const context = canvas.getContext('2d');
-              canvas.width = video.videoWidth;  
-              canvas.height = video.videoHeight;
-              context.drawImage(video, 0, 0, canvas.width, canvas.height);
-
-              const imageDataURL = canvas.toDataURL('image/png');
-
-              capturedImage.src = imageDataURL; 
-              capturedImage.style.display = 'block'; 
-          }
-      });
-
-
-      window.addEventListener('beforeunload', () => {
-          if (stream) {
-              stream.getTracks().forEach(track => track.stop());
-          }
-      });
-
-    </script>
-
+    <canvas id="canvas"></canvas>  <img id="capturedImage" alt="Captured Image"> 
   </body>
 </html>
