--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Camera Access</title>
     <script src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <script>
+      import * as THREE from "three";
+import { OrbitControls } from "three/addons/controls/OrbitControls.js";
+import { GLTFLoader } from "three/addons/loaders/GLTFLoader.js";
+    </script>
 
   </head>
   <body>
