--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
 <html>
   <head>
     <title>Camera Access</title>
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <script>
-      import * as THREE from "three";
-import { OrbitControls } from "three/addons/controls/OrbitControls.js";
-import { GLTFLoader } from "three/addons/loaders/GLTFLoader.js";
-    </script>
-
   </head>
   <body>
     <video id="video" autoplay playsinline></video>
