--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
   <head>
     <title>Camera Access</title>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@v0.179.0/build/three.module.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.179.0/examples/jsm/"
+        }
+      }
+    </script>
     <script type="module" src="main.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
