--- a/index.html
+++ b/index.html
@@ -14,16 +14,28 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
+        // Set a background color (so you know *something* is rendering)
+        renderer.setClearColor(0xadd8e6); // Light blue
+
         const loader = new THREE.GLTFLoader();
 
         loader.load('models/bocolla/bocolla.gltf', (gltf) => {
             const model = gltf.scene;
             scene.add(model);
-            camera.position.z = 5;  // Position camera
-            camera.lookAt(0, 0, 0); // Make camera look at the origin
 
+            // Position the camera *outside* the model
+            camera.position.set(0, 2, 5); // Adjust these values
+            camera.lookAt(0, 0, 0); // Look at the center of the scene
+
+            // Add lights (even if your model doesn't strictly need them, it's good for testing)
             const ambientLight = new THREE.AmbientLight(0x404040);
             scene.add(ambientLight);
+            const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
+            directionalLight.position.set(1, 1, 1).normalize();
+            scene.add(directionalLight);
+
+            // Log the model to the console to verify it loaded
+            console.log("Loaded model:", model);
 
             function animate() {
                 requestAnimationFrame(animate);
@@ -34,10 +46,10 @@
         }, (xhr) => {
             console.log((xhr.loaded / xhr.total * 100) + '% loaded');
         }, (error) => {
-            console.error('Error loading GLTF:', error); // More specific error message
+            console.error('Error loading GLTF:', error);
         });
 
-        window.addEventListener('resize', () => { //Handle resize
+        window.addEventListener('resize', () => {
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
