--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script src="https://cdn.jsdelivr.net/npm/three@latest/examples/js/loaders/GLTFLoader.js"></script>
     <script src=""></script>
     <script type="module" src="main.js"></script>
+    <canvas id="canvas"></canvas>
   </body>
 </html>
