--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/three@latest/examples/js/loaders/GLTFLoader.js"></script>
     <script src=""></script>
     <script type="module" src="main.js"></script>
-    <video id="video" autoplay muted loop></video>
+    <video id="video" autoplay playsinline></video>
+    <button id="snap">Take Photo</button>
+    <canvas id="canvas"></canvas>
+    <img id="capturedImage" alt="Captured Image" />
   </body>
 </html>
