--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <script type="module" src="main.js"></script>
     <video id="video" autoplay playsinline></video>
     <canvas id="canvas"></canvas>
+
+    <button id="nextObject"></button>
+    <button id="previousObject"></button>
   </body>
 </html>
