--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Three.js Rotation Test</title>
+    <title>Stamper</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
