--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Stamper</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,
-    maximum-scale=1.0, user-scalable=no"" />
+    <meta name="viewport" content="user-scalable=no" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
