--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Stamper</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no"" />
+    <meta name="viewport" content="user-scalable=no"" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
