--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Stamper</title>
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0,
+      content=" initial-scale=1.0,
     maximum-scale=1.0, user-scalable=no"
     />
     <link rel="stylesheet" href="styles.css" />
