--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html>
   <head>
     <title>Stamper</title>
-    <meta
-      name="viewport"
-      content=" initial-scale=2.0,
-    maximum-scale=2.0, user-scalable=no"
-    />
+    <meta name="viewport" content=" user-scalable=no" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
