--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" />
     <title>Stamper</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -14,6 +11,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/three@latest/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@latest/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three-orbitcontrols@2.110.3/OrbitControls.min.js"></script>
     <video id="video" autoplay playsinline></video>
     <script type="module" src="main.js"></script>
 
